--- a/book/python/02_variables.ipynb
+++ b/book/python/02_variables.ipynb
@@ -66,12 +66,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "4",
       "metadata": {
-        "id": "4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4",
+        "outputId": "a6ceb927-cac2-4862-b897-e50603ba3e93"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
+          ]
+        }
+      ],
       "source": [
         "print(num_points)"
       ]
@@ -88,12 +100,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "6",
       "metadata": {
-        "id": "6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6",
+        "outputId": "3a3b6817-b166-4f8a-c0fe-2b858252aef7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
       "source": [
         "num_points"
       ]
@@ -132,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "9",
       "metadata": {
         "id": "9"
@@ -154,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "11",
       "metadata": {
         "id": "11"
@@ -177,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "13",
       "metadata": {
         "id": "13"
@@ -209,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "16",
       "metadata": {
         "id": "16"
@@ -285,12 +312,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "22",
       "metadata": {
-        "id": "22"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "22",
+        "outputId": "261c5fab-63ab-4303-92c9-bc956b7e535a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n",
+            "This is a Python script.\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Hello World!\\nThis is a Python script.\")"
       ]
@@ -392,12 +432,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "31",
       "metadata": {
-        "id": "31"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "31",
+        "outputId": "8d487f44-35d6-4ed5-9be2-893d439b5fd9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Updated number of features: 520\n"
+          ]
+        }
+      ],
       "source": [
         "num_features += 20\n",
         "print(\"Updated number of features:\", num_features)"
@@ -415,12 +467,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "33",
       "metadata": {
-        "id": "33"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "33",
+        "outputId": "6131fdb9-72cf-4acf-c38c-11c93d4c6e5f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Latitude in radians: 0.6228992833905163\n"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "\n",
@@ -441,12 +505,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "35",
       "metadata": {
-        "id": "35"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "35",
+        "outputId": "d60e6150-fe4d-4ee7-df39-4b77800ff42f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Updated coordinates: [35.6895, 139.6917, 34.0522, -118.2437]\n"
+          ]
+        }
+      ],
       "source": [
         "coordinates = [35.6895, 139.6917]\n",
         "coordinates.append(34.0522)  # Adding latitude of Los Angeles\n",
@@ -466,12 +542,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "37",
       "metadata": {
-        "id": "37"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        },
+        "id": "37",
+        "outputId": "87fd84e2-06fa-4fdb-8c03-f99ce65b9c99"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'feature_attributes' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-2e79a444a7a4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmount_fuji_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_attributes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmount_fuji_height\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_attributes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"height_meters\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{mount_fuji_name} is {mount_fuji_height} meters high.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'feature_attributes' is not defined"
+          ]
+        }
+      ],
       "source": [
         "mount_fuji_name = feature_attributes[\"name\"]\n",
         "mount_fuji_height = feature_attributes[\"height_meters\"]\n",
@@ -494,7 +587,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "39",
       "metadata": {
         "id": "39"
@@ -521,12 +614,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "41",
       "metadata": {
-        "id": "41"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "41",
+        "outputId": "ad7048fe-c009-43f4-bea8-4917cc1ed9ce"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Centroid of the points is at: [42.526425, 5.918099999999998]\n"
+          ]
+        }
+      ],
       "source": [
         "centroid_lat = sum([point[0] for point in points]) / len(points)\n",
         "centroid_lon = sum([point[1] for point in points]) / len(points)\n",
@@ -562,13 +667,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "44",
       "metadata": {
         "id": "44"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "coordinates = [\n",
+        "    (\"Nairobi\", -1.286389, 36.817223),\n",
+        "    (\"Kisumu\", -0.1022, 34.7617),\n",
+        "    (\"Nakuru\", -0.2833, 36.0667),\n",
+        "    (\"Eldoret\", 0.5167, 35.2833)\n",
+        "]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Extract latitude and longitude values\n",
+        "latitudes = [coord[1] for coord in coordinates]\n",
+        "longitudes = [coord[2] for coord in coordinates]\n",
+        "\n",
+        "# Calculate centroid\n",
+        "centroid_lat = sum(latitudes) / len(latitudes)\n",
+        "centroid_lon = sum(longitudes) / len(longitudes)\n",
+        "\n",
+        "# Display centroid\n",
+        "print(f\"Centroid of the given locations: ({centroid_lat}, {centroid_lon})\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gDqLWdiExs3J",
+        "outputId": "e4e29ec6-b61a-4265-efce-93cf28061a6d"
+      },
+      "id": "gDqLWdiExs3J",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Centroid of the given locations: (-0.28879725, 35.73223075)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
